k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: facturas-control
  labels:
    name: facturas-control
